@@ -1,0 +1,1 @@
+old-style-config-script-multiarch-path
